2015-08-23
- add some checks on game creation/opening/saving
- add assertions
- add const to some methods
- add documentations
- add open/save in Game.cpp

2015-08-22
- add open/save/save as/save all/close/closeall/quit mechanisms

2015-08-21
- add some connections
- add ui creation and insertion in the main window

2015-08-19
- add UiEditGameName class
- comment sources (doxygen)
- MainWindow is now a singleton

2015-08-19
- create first actions
- create the controller