@@ -52,6 +52,12 @@ QString Game::name() const
     return Name;
 }
 
+void Game::setName (QString name)
+{
+    Name = name;
+    Modified = true;
+}
+
 /**
  * @brief Return the complete file name of a game
  * @return QString Full file name
@@ -62,12 +68,21 @@ QString Game::fullfilename() const
 }
 
 /**
+ * @brief Set the file name of a game
+ * @param filename File name
+ */
+void Game::setFilename(QString filename)
+{
+    FullFilename = filename;
+}
+
+/**
  * @brief Save a game to its file
  */
 void Game::save()
 {
+    // Don't assert(Modified), because this method must be callable by a saveAs procedure
     Q_ASSERT(!FullFilename.isEmpty());
-    Q_ASSERT(Modified);
 
     // Create and open the file
     QFile file(FullFilename);
@@ -78,20 +93,12 @@ void Game::save()
     QDataStream stream(&file);
 
     // Save the file
-    stream << QString(GAME_FILE_SIGNATURE) << GAME_FILE_VERSION << FullFilename;
+    stream << QString(GAME_FILE_SIGNATURE) << GAME_FILE_VERSION << Name;
     if (stream.status() != QDataStream::Ok) {
         QMessageBox::critical(MainWindow::get(), tr("Error"), tr("Couldn't save to the file %1").arg(FullFilename));
         return;
     }
-}
-
-/**
- * @brief Set the file name of a game
- * @param filename File name
- */
-void Game::setFilename(QString filename)
-{
-    FullFilename = filename;
+    Modified = false;
 }
 
 /**
@@ -118,7 +125,7 @@ Game* Game::open(QString filename)
 
     if (signature != GAME_FILE_SIGNATURE) {
         QMessageBox::critical(MainWindow::get(), tr("Error"), tr("This is not a FMetro file").arg(filename));
-        return  nullptr;
+        return nullptr;
     }
     if (version < GAME_FILE_VERSION) {
         QMessageBox::critical(MainWindow::get(), tr("Error"), tr("Your version of FMetro is too old, please upgrade").arg(filename));
@@ -129,6 +136,7 @@ Game* Game::open(QString filename)
     QString name;
     stream >> name;
     Game* game = new Game(name);
+    game->setFilename(filename);
 
     if (stream.status() != QDataStream::Ok) {
         QMessageBox::critical(MainWindow::get(), tr("Error"), tr("Couldn't read that file").arg(filename));
