@@ -4,3 +4,5 @@
 - implement changeCurrentUi in Controller
 - Q_ASSERT -> QT_NO_DEBUG
 - QStyle::StandardPixmap
+- a tab is closed before asking to be saved ? is it losed anyway ?
+- tabs name not updated when editing name
